Initial push of work - works but with some caveats
Currently requires that the query be in a file format as the vectorizer only works based on what it's setup with, which in this case for now is filenames. Need to swap it over to reading in all the documents ain text form so the query can be provided via text too

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Documents used for testing the finder
+test_docs/
+
+# Environment variables file
+.env
